[package]
name = "subghz"
version = "0.1.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Driver for the sub-GHz radio on the STM32WL series MCU."

[dependencies]

[dependencies.stm32wl]
git = "https://github.com/newAM/stm32wl-rs.git"
rev = "031c2ecc3664c8ef3f642fbce075b2c238d5ff1b"
features = ["stm32wl5x_cm4"]
